add tech-stack to carousel with tooltips

--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
                         <span>CSS3</span>
                     </div>
                     <div class="technology">
+                        <i class="devicon-materialui-plain colored"></i>
+                        <span>MATERIAL UI</span>
+                    </div>
+                    <div class="technology">
+                        <i class="devicon-redux-original colored"></i>
+                        <span>REDUX & RECOIL</span>
+                    </div>
+                    <div class="technology">
                         <i class="devicon-jest-plain colored"></i>
                         <span>JEST</span>
                     </div>
@@ -140,6 +148,10 @@
                         <span>FLASK</span>
                     </div>
                     <div class="technology">
+                        <i class="devicon-bootstrap-plain colored"></i>
+                        <span>BOOTSTRAP</span>
+                    </div>
+                    <div class="technology">
                         <i class="devicon-webflow-original colored"></i>
                         <span>WEBFLOW</span>
                     </div>
@@ -151,7 +163,7 @@
     <section id="projects">
         <div class="section-header">
             <h2>Projects</h2>
-            <p>Some of the things I have worked on</p>
+            <p>Some of the things I have worked on, along with the tech stack I have used</p>
         </div>
 
         <!-- Carousel for bigger screens -->
@@ -161,7 +173,43 @@
               <div class="slide-position">1 / 5</div>
               <img src="./images/orders.png">
               <div class="slide-description">
-                <h3>Commercio Orders</h3>
+                <h3>
+                    Commercio Orders
+                    <div class="slide-tech-stack">
+                        <div class="tooltip">
+                            <i class="devicon-react-original colored slide-tech"></i>
+                            <span class="tooltip-text">React</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-nodejs-plain-wordmark colored slide-tech"></i>
+                            <span class="tooltip-text">Node</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-typescript-plain colored slide-tech"></i>
+                            <span class="tooltip-text">TypeScript</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-materialui-plain colored slide-tech"></i>
+                            <span class="tooltip-text">Material UI</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-redux-original colored slide-tech"></i>
+                            <span class="tooltip-text">Redux & Recoil</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-jest-plain colored slide-tech"></i>
+                            <span class="tooltip-text">React Testing Library with Jest</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-csharp-line-wordmark slide-tech"></i>
+                            <span class="tooltip-text">C#</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-azuresqldatabase-plain colored slide-tech"></i>
+                            <span class="tooltip-text">Microsoft Azure SQL Database</span>
+                        </div>           
+                    </div>
+                </h3>
                 <p>
                     Commercio Orders is a CRM platform for Promotional Products Industry distributors. Users are able to source competitively-priced 
                     products, manage quotes, and send purchase orders with less back and forth with the suppliers, all in one system.
@@ -177,9 +225,27 @@
               <div class="slide-position">2 / 5</div>
               <img src="./images/thai.png">
               <div class="slide-description">
-                <h3>Thai Sport Bodyworks™ Official</h3>
+                <h3>Thai Sport Bodyworks Official</h3>
+                <div class="slide-tech-stack">
+                    <div class="tooltip">
+                        <i class="devicon-webflow-original colored slide-tech"></i>
+                        <span class="tooltip-text">Webflow</span>
+                    </div>
+                    <div class="tooltip">
+                        <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
+                        <span class="tooltip-text">HTML5</span>
+                    </div>
+                    <div class="tooltip">
+                        <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
+                        <span class="tooltip-text">CSS3</span>
+                    </div>
+                    <div class="tooltip">
+                        <i class="devicon-javascript-plain colored slide-tech"></i>
+                        <span class="tooltip-text">JavaScript</span>
+                    </div>
+                </div>
                 <p>
-                    Thai Sport Bodyworks™ is San Diego's premier massage/sports therapy center. Move, Feel, and Live your best life!
+                    Thai Sport Bodyworks is San Diego's premier massage/sports therapy center. Move, Feel, and Live your best life!
                     We’re a next generation wellness business that provides everything you need to get you moving at your best — no matter where you’re at today!
                 </p>
                 <div class="project-links">
@@ -193,6 +259,20 @@
               <img src="./images/frog.png">
               <div class="slide-description">
                 <h3>Frog Feast</h3>
+                <div class="slide-tech-stack">
+                    <div class="tooltip">
+                        <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
+                        <span class="tooltip-text">HTML5</span>
+                    </div>
+                    <div class="tooltip">
+                        <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
+                        <span class="tooltip-text">CSS3</span>
+                    </div>
+                    <div class="tooltip">
+                        <i class="devicon-javascript-plain colored slide-tech"></i>
+                        <span class="tooltip-text">JavaScript</span>
+                    </div>
+                </div>
                 <p>
                     Frog Feast is a browser-based game built in 7 days where you are a frog, eating bugs for a high score. This was my entry for the August Mintbean 
                     Hiring Hackathon of 2022 and it won the Mintbean Star for "exemplary achievement in the field of web development"!
@@ -209,9 +289,31 @@
                 <img src="./images/mixer.png">
                 <div class="slide-description">
                     <h3>Mixer</h3>
+                    <div class="slide-tech-stack">
+                        <div class="tooltip">
+                            <i class="devicon-react-original colored slide-tech"></i>
+                            <span class="tooltip-text">React</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
+                            <span class="tooltip-text">CSS</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-nodejs-plain-wordmark colored slide-tech"></i>
+                            <span class="tooltip-text">Node</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-express-original slide-tech"></i>
+                            <span class="tooltip-text">Express</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-postgresql-plain colored slide-tech"></i>
+                            <span class="tooltip-text">PostgreSQL</span>
+                        </div>
+                    </div>
                     <p>
                         Mixer is a Full-stack cocktail mixology application featuring a database of over 1000 recipes and igredients, an API with authentication 
-                        and password hashing for added security, and a Front-end deployed on Netflify.
+                        and password hashing for added security, and a Front-end with CSS modules deployed on Netflify.
                     </p>
                     <div class="project-links">
                         <a target="_blank" aria-label="Opens GitHub back end repository in new tab" href="https://github.com/lemonstener/mixerdb"><button role="link" class="btn-source">Source code BE <i class="fa-solid fa-link"></i></button></a>
@@ -225,6 +327,36 @@
                 <img src="./images/hearthstone.png">
                 <div class="slide-description">
                     <h3>The Forge</h3>
+                    <div class="slide-tech-stack">
+                        <div class="tooltip">
+                            <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
+                            <span class="tooltip-text">HTML5</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
+                            <span class="tooltip-text">CSS3</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-javascript-plain colored slide-tech"></i>
+                            <span class="tooltip-text">JavaScript</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-python-plain colored slide-tech"></i>
+                            <span class="tooltip-text">Python</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-flask-original slide-tech"></i>
+                            <span class="tooltip-text">Flask</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-postgresql-plain colored slide-tech"></i>
+                            <span class="tooltip-text">PostgreSQL</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-sqlalchemy-plain slide-tech"></i>
+                            <span class="tooltip-text">SQLAlchemy</span>
+                        </div>
+                    </div>
                     <p>
                         The Forge is a Full-stack, deck-building application for the Digital Card game Hearthstone with over 2000 cards. 
                         This was my first foray into Full-stack development territory, and it allows users to build their own decks, the same way they would in the game.
