update mobile tech stacks to use icons and have tooltips act as popups

--- a/index.html
+++ b/index.html
@@ -392,7 +392,40 @@
                         <img alt="Screenshot of Commercio Orders" src="./images/orders.png" />
                     </div>
                     <div class="project-information">
-                        <h4 class="tech-used">Tech stack: React, TypeScript, Material UI, Recoil/Redux, React Testing Library with Jest, C#, SQL, Azure DevOps, REST, AGILE</h4>
+                        <div class="tech-used">
+                            <div class="tooltip popuptip">
+                                <i class="devicon-react-original-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">React</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-nodejs-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">Node</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-typescript-plain colored project-tech"></i>
+                                <span class="tooltip-text">TypeScript</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-materialui-plain colored project-tech"></i>
+                                <span class="tooltip-text">Material UI</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-redux-original colored project-tech"></i>
+                                <span class="tooltip-text">Redux & Recoil</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-jest-plain colored project-tech"></i>
+                                <span class="tooltip-text">React Testing Library with Jest</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-csharp-plain colored project-tech"></i>
+                                <span class="tooltip-text">C#</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-azuresqldatabase-plain colored project-tech"></i>
+                                <span class="tooltip-text">Microsoft Azure SQL Database</span>
+                            </div>
+                        </div>
                         <p class="project-description">
                             Commercio Orders is a CRM platform for Promotional Products Industry distributors. Users are able to source competitively-priced 
                             products, manage quotes, and send purchase orders with less back and forth with the suppliers, all in one system.
@@ -406,16 +439,33 @@
             </li>
             <li class="project">
                 <div class="project-header">
-                    <h3 class="project-title">Thai Sport Bodyworks™ Official</h3>
+                    <h3 class="project-title">Thai Sport Bodyworks Official</h3>
                 </div>
                 <div class="project-data">
                     <div class="project-image-container">
-                        <img alt="Screenshot of Thai Sport Bodyworks™ website" src="./images/thai.png" />
+                        <img alt="Screenshot of Thai Sport Bodyworks website" src="./images/thai.png" />
                     </div>
                     <div class="project-information">
-                        <h4 class="tech-used">Tech stack: Webflow, JavaScript</h4>
+                        <div class="tech-used">
+                            <div class="tooltip popuptip">
+                                <i class="devicon-webflow-original colored project-tech"></i>
+                                <span class="tooltip-text">Webflow</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-html5-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">HTML5</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-css3-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">CSS3</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-javascript-plain colored project-tech"></i>
+                                <span class="tooltip-text">JavaScript</span>
+                            </div>
+                        </div>
                         <p class="project-description">
-                            Thai Sport Bodyworks™ is San Diego's premier massage/sports therapy center. Move, Feel, and Live your best life!
+                            Thai Sport Bodyworks is San Diego's premier massage/sports therapy center. Move, Feel, and Live your best life!
                             We’re a next generation wellness business that provides everything you need to get you moving at your best — no matter where you’re at today!
                         </p>
                         <div class="project-links">
@@ -434,7 +484,20 @@
                         <img alt="Screenshot of Frog Feast" src="./images/frog.png" />
                     </div>
                     <div class="project-information">
-                        <h4 class="tech-used">Tech stack: JavaScript, HTML, CSS</h4>
+                        <div class="tech-used">
+                            <div class="tooltip popuptip">
+                                <i class="devicon-html5-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">HTML5</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-css3-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">CSS3</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-javascript-plain colored project-tech"></i>
+                                <span class="tooltip-text">JavaScript</span>
+                            </div>
+                        </div>
                         <p class="project-description">
                             Frog Feast is a browser-based game built in 7 days where you are a frog, eating bugs for a high score. This was my entry for the August Mintbean 
                             Hiring Hackathon of 2022 and it won the Mintbean Star for "exemplary achievement in the field of web development"!
@@ -458,7 +521,28 @@
                         <img alt="Screenshot of Mixer" src="./images/mixer.png" />
                     </div>
                     <div class="project-information">
-                        <h4 class="tech-used">Tech stack: React, Node, Express, PostgreSQL, Jest</h4>
+                        <div class="tech-used">
+                            <div class="tooltip popuptip">
+                                <i class="devicon-react-original colored project-tech"></i>
+                                <span class="tooltip-text">React</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-css3-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">CSS</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-nodejs-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">Node</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-express-original project-tech"></i>
+                                <span class="tooltip-text">Express</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-postgresql-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">PostgreSQL</span>
+                            </div>
+                        </div>
                         <p class="project-description">
                             Mixer is a Full-stack cocktail mixology application featuring a database of over 1000 recipes and igredients, an API with authentication 
                             and password hashing for added security, and a Front-end deployed on Netflify.
@@ -482,7 +566,36 @@
                         <img alt="Screenshot of The Forge" src="./images/hearthstone.png" />
                     </div>
                     <div class="project-information">
-                        <h4 class="tech-used">Tech stack: JavaScript, Python, Flask, SQLAlchemy</h4>
+                        <div class="tech-used">
+                            <div class="tooltip popuptip">
+                                <i class="devicon-html5-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">HTML5</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-css3-plain-wordmark colored project-tech"></i>
+                                <span class="tooltip-text">CSS3</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-javascript-plain colored project-tech"></i>
+                                <span class="tooltip-text">JavaScript</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-python-plain colored project-tech"></i>
+                                <span class="tooltip-text">Python</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-flask-original project-tech"></i>
+                                <span class="tooltip-text">Flask</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-postgresql-plain colored project-tech"></i>
+                                <span class="tooltip-text">PostgreSQL</span>
+                            </div>
+                            <div class="tooltip popuptip">
+                                <i class="devicon-sqlalchemy-plain project-tech"></i>
+                                <span class="tooltip-text">SQLAlchemy</span>
+                            </div>
+                        </div>
                         <p class="project-description">
                             The Forge is a Full-stack, deck-building application for the Digital Card game Hearthstone with over 2000 cards. 
                             This was my first foray into Full-stack development territory, and it allows users to build their own decks, the same way they would in the game.
