update hero section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css-reset.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="preload" as="image" href="./images/stock-background.jpg">
+    <link rel="preload" as="image" href="./images/farzad-p-xSl33Wxyc-unsplash.jpg">
     <link rel="preload" as="image" href="./images/orders.png">
     <link rel="preload" as="image" href="./images/thai.png">
     <link rel="preload" as="image" href="./images/frog.png">
@@ -27,7 +27,7 @@
     <!-- Navigation bar -->
 
     <header>
-        <div id="brand"><a href="/deyan-portfolio">Deyan Vasilev</a></div>
+        <div id="brand"><a href="#hero">Deyan Vasilev</a></div>
         <nav>
           <ul>
             <li><a href="#hero">Home</a></li>
@@ -56,8 +56,10 @@
     <!-- Hero section -->
     <main>
         <section id="hero">
+            <div>
                 <h1>Deyan Vasilev</h1>
                 <h2>Software Engineer</h2> 
+            </div>
         </section>
 
     <!-- About section & Download CV -->
