remove #projects box-shadow

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <p>
                     Hello World! My name is Deyan and I am a Front-end Software Engineer. I am originally from Bulgaria and have lived in the United States since 2012.<br><br>
                     I specialize in developing SPA applications with React and JavaScript, but my skillset extends well beyond that.
-                    I am also more than capable of producing quality back-end work when needed, as demonstrated by my work experience and personal projects. <br> <br>
+                    I am also more than capable of producing high quality back-end work when needed, as demonstrated by my work experience and personal projects. <br> <br>
                     I have always maintained a "Never get comfortable, always challenge yourself" mentality, which has helped me grow 
-                    immensely in all of my roles. I enjoy tackling complex problems, crafting innovative solutions, and cracking a silly joke in-between. <br><br>
+                    immensely in all of my roles. I enjoy tackling complex problems and crafting innovative solutions. <br><br>
                     If you like what you see, feel free to check out my resume or reach out to me directly! I am looking forward to hearing from you! 
                     </p> <br>
                     <a target="_blank" class="btn-live" aria-label="Opens resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Download CV <i class="fa-solid fa-download"></i></a>
@@ -292,7 +292,7 @@
                 </div>
                 <p>
                     Frog Feast is a browser-based game I built in 7 days where you are a frog, eating bugs for a high score. This was my entry for the August Mintbean 
-                    Hiring Hackathon of 2022 and it won the Mintbean Star Award for "exemplary achievement in the field of web development"!
+                    Hiring Hackathon of 2021 and it won the Mintbean Star Award for "exemplary achievement in the field of web development"!
                 </p>
                 <a target="_blank" class="btn-live" aria-label="Opens website in new tab" href="https://lemonstener.github.io/frog-feast/">Website <i class="fa-solid fa-link"></i></a>
                 <a target="_blank" class="btn-source" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/frog-feast">Source code <i class="fa-solid fa-link"></i></a>
@@ -442,7 +442,7 @@
                         </div>
                         <p class="project-description">
                             Frog Feast is a browser-based game I built in 7 days where you are a frog, eating bugs for a high score. This was my entry for the August Mintbean 
-                            Hiring Hackathon of 2022 and it won the Mintbean Star Award for "exemplary achievement in the field of web development"!
+                            Hiring Hackathon of 2021 and it won the Mintbean Star Award for "exemplary achievement in the field of web development"!
                         </p>
                         <a target="_blank" class="btn-live" aria-label="Opens website in new tab" href="https://lemonstener.github.io/frog-feast/">Website <i class="fa-solid fa-link"></i></a>
                         <a target="_blank" class="btn-source" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/frog-feast">Source code <i class="fa-solid fa-link"></i></a>
