hide mobile links temporarily

--- a/index.html
+++ b/index.html
@@ -475,12 +475,12 @@
                         <span class="tooltip-text">Download resume</span>
                     </div>
                 </div>
-                <div class="contact-links">
+                <!-- <div class="contact-links">
                     <a aria-label="Opens Deyan's LinkedIn profile in new tab" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/">LinkedIn <i class="fab fa-linkedin linkedin"></i></a>
                     <a aria-label="Opens Deyan's GitHub profile in new tab" target="_blank" href="https://github.com/lemonstener">GitHub <i class="fab fa-github github"></i></a>
                     <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto: deyanvasilev7@gmail.com">deyanvasilev7@gmail.com <i class="fas fa-envelope mail"></i></a>
                     <a aria-label="Download Resume in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Resume <i class="fa-solid fa-file"></i></a>
-                </div>
+                </div> -->
                 <p>Website developed by Deyan Vasilev</p>
         </section>
     </footer>
